; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_slist.c_curl_slist_append.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_slist.c_curl_slist_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %0, i8* %1) #0 {
  %3 = alloca %struct.curl_slist*, align 8
  %4 = alloca %struct.curl_slist*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.curl_slist* %0, %struct.curl_slist** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i8* @strdup(i8* %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store %struct.curl_slist* null, %struct.curl_slist** %3, align 8
  br label %23

12:                                               ; preds = %2
  %13 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call %struct.curl_slist* @Curl_slist_append_nodup(%struct.curl_slist* %13, i8* %14)
  store %struct.curl_slist* %15, %struct.curl_slist** %4, align 8
  %16 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  %17 = icmp ne %struct.curl_slist* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %12
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @free(i8* %19)
  br label %21

21:                                               ; preds = %18, %12
  %22 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  store %struct.curl_slist* %22, %struct.curl_slist** %3, align 8
  br label %23

23:                                               ; preds = %21, %11
  %24 = load %struct.curl_slist*, %struct.curl_slist** %3, align 8
  ret %struct.curl_slist* %24
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local %struct.curl_slist* @Curl_slist_append_nodup(%struct.curl_slist*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
